# work_board

./: .gitignore  CLAUDE.md  PLAN.md
docs/superpowers/plans/: 2026-06-26-blog.md  2026-07-08-home-public-feed.md  2026-07-14-comment-edit-login-modal.md  2026-07-14-mypage.md
docs/superpowers/specs/: 2026-06-26-blog-design.md  2026-07-14-mypage-design.md  (+2 more)
infra/: docker-compose.yml
work_board_backend/: .env.example  .gitignore  Dockerfile  PLAN.md  README.md  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt
work_board_backend/app/: logger.py  main.py
work_board_backend/app/api/auth/: router.py  schema.py  service.py
work_board_backend/app/api/groups/: router.py  schema.py  service.py
work_board_backend/app/api/groups/repository/: base_groups_repository.py
work_board_backend/app/api/groups/services/: base_groups_service.py
work_board_backend/app/api/mypage/: router.py  schema.py  service.py
work_board_backend/app/api/posts/: router.py  schema.py  service.py
work_board_backend/app/api/upload/: router.py
work_board_backend/app/api/users/: router.py  schema.py  service.py
work_board_backend/app/api/users/repository/: base_users_repository.py
work_board_backend/app/api/users/services/: base_users_service.py
work_board_backend/app/core/: base_repository.py  config.py  db.py  models.py  redis_client.py  schema.py  security.py  session_manager.py
work_board_backend/migrations/: 20260715_add_comment_updated_at.sql
work_board_frontend/: PLAN.md  index.html  package-lock.json  package.json
work_board_frontend/src/: App.jsx  index.css
(+17 files in other folders)
